tests/ui/type-alias-impl-trait/auto-trait-leakage3.stderr
error: cannot check whether the hidden type of `auto_trait_leakage3[211d]::m::Foo::{opaque#0}` satisfies auto traits
  --> $DIR/auto-trait-leakage3.rs:13:17
   |
LL |         is_send(foo());
   |         ------- ^^^^^
   |         |
   |         required by a bound introduced by this call
   |
note: opaque type is declared here
  --> $DIR/auto-trait-leakage3.rs:7:20
   |
LL |     pub type Foo = impl std::fmt::Debug;
   |                    ^^^^^^^^^^^^^^^^^^^^
note: this item depends on auto traits of the hidden type, but may also be registering the hidden type. This is not supported right now. You can try moving the opaque type and the item that actually registers a hidden type into a new submodule
  --> $DIR/auto-trait-leakage3.rs:12:12
   |
LL |     pub fn bar() {
   |            ^^^
note: required by a bound in `is_send`
  --> $DIR/auto-trait-leakage3.rs:17:19
   |
LL |     fn is_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `is_send`

error: aborting due to previous error

